ftpreview/dlli.h

typedef void *DWYCO_LIST;
typedef DWYCO_LIST DWYCO_SAVED_MSG_LIST;
typedef void (DWYCOCALLCONV *DwycoChannelDestroyCallback)(int id, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoStatusCallback)(int id, const char *msg, int percent_done, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoCallAppearanceCallback)(int chan_id, const char *name, const char *location, const char *uid, int len_uid, const char *call_type, int len_call_type);
typedef  void (DWYCOCALLCONV *DwycoMessageSendCallback)(int id, int what, const char *recipient, int reciplen, const char *server_msg, void *user_arg);
typedef  void (DWYCOCALLCONV *DwycoCommandCallback)(const char *cmd, void *user_arg, int succ, const char *failed_reason);
typedef  void (DWYCOCALLCONV *DwycoProfileCallback)(int succ, const char *reason, const char *s1, int len_s1, const char *s2, int len_s2, const char *s3, int len_s3, const char *filename, const char *uid, int len_uid, int reviewed, int regular, void *user_arg);
void DWYCOEXPORT dwyco_command_from_keyboard(int chan_id, int com,
        int arg1, int arg2, const char *str, int len);
void DWYCOEXPORT dwyco_line_from_keyboard(int chan_id, const char *line, int len);
void DWYCOEXPORT dwyco_destroy_channel(int chan_id);
void DWYCOEXPORT dwyco_hangup_all_calls();
void DWYCOEXPORT dwyco_pause_all_channels(int);
void DWYCOEXPORT dwyco_set_channel_destroy_callback(int chan_id,
        DwycoChannelDestroyCallback cb, void *user_arg);
int DWYCOEXPORT dwyco_list_get(DWYCO_LIST l, int row, const char *col,
                               const char **out, int *len_out, int *type_out);
void DWYCOEXPORT dwyco_inhibit_sac(int i);
void DWYCOEXPORT dwyco_inhibit_lanmap(int i);
void DWYCOEXPORT dwyco_set_call_acceptance_callback(DwycoCallAppearanceCallback cb);
void DWYCOEXPORT dwyco_set_invisible_state(int invis);
int DWYCOEXPORT dwyco_get_invisible_state();
int DWYCOEXPORT dwyco_make_zap_composition(char *must_be_zero);
int DWYCOEXPORT dwyco_dup_zap_composition(int compid);
int DWYCOEXPORT dwyco_make_forward_zap_composition(
    const char *uid, 
    int len_uid,
    const char *msg_id,
    int strip_forward_text
);
int DWYCOEXPORT dwyco_is_forward_composition(int compid);
int DWYCOEXPORT dwyco_flim(int compid);
int DWYCOEXPORT dwyco_delete_zap_composition(int compid);
int DWYCOEXPORT dwyco_zap_record(int compid, int video, int audio, int pic, int frames,
                                 DwycoChannelDestroyCallback dcb, void *dcb_arg1, int *chan_id_out);
int DWYCOEXPORT dwyco_zap_stop(int compid);
int DWYCOEXPORT dwyco_zap_play(int compid,
                               DwycoChannelDestroyCallback dcb, void *dcb_arg1, int *chan_id_out);
int DWYCOEXPORT dwyco_make_zap_view(DWYCO_SAVED_MSG_LIST list, const char *recip_uid, int len_uid, int unsaved);
int DWYCOEXPORT dwyco_make_zap_view_file(const char *filename);
int DWYCOEXPORT dwyco_delete_zap_view(int viewid);
int DWYCOEXPORT dwyco_zap_play_view(int viewid, DwycoChannelDestroyCallback dcb, void *dcb_arg1,
                                    int *chan_id_out);
int DWYCOEXPORT dwyco_zap_play_preview(int viewid,
                                       DwycoChannelDestroyCallback dcb, void *dcb_arg1,
                                       int *chan_id_out);
int DWYCOEXPORT dwyco_zap_stop_view(int viewid);
int DWYCOEXPORT dwyco_zap_quick_stats_view(int viewid, int *has_video, int *has_audio, int *short_video);
int DWYCOEXPORT dwyco_set_external_video(int v);
typedef void (DWYCOCALLCONV *DwycoVVCallback)(void *);
typedef int (DWYCOCALLCONV *DwycoIVCallback)(void *);
typedef int (DWYCOCALLCONV *DwycoIVICallback)(void *, int);
typedef void (DWYCOCALLCONV *DwycoVVIICallback)(void *, int, int);
typedef void *(DWYCOCALLCONV *DwycoVidGetDataCallback)(void *, int *r, int *c, int *bytes, int *fmt, unsigned long *captime);
typedef char **(DWYCOCALLCONV *DwycoCACallback)();
typedef void (DWYCOCALLCONV *DwycoFCACallback)(char **);
typedef void (DWYCOCALLCONV *DwycoVICallback)(int);
typedef void (DWYCOCALLCONV *DwycoVCallback)();
void DWYCOEXPORT dwyco_set_external_video_capture_callbacks(
    DwycoVVCallback nw,
    DwycoVVCallback del,
    DwycoIVICallback init,
    DwycoIVCallback has_data,
    DwycoVVCallback need,
    DwycoVVCallback pass,
    DwycoVVCallback stop,
    DwycoVidGetDataCallback get_data,
    DwycoVVCallback free_data,
    DwycoCACallback get_vid_devices,
    DwycoFCACallback free_vid_list,
    DwycoVICallback set_vid_device,
    DwycoVCallback stop_vid_device,
    DwycoVCallback show_source_dialog,
    DwycoVVCallback hw_preview_on,
    DwycoVCallback hw_preview_off,
    DwycoVVCallback set_app_data
);
typedef void *(DWYCOCALLCONV *DwycoAudGetDataCallback)(void *, int *, int *);
void DWYCOEXPORT dwyco_set_external_audio_capture_callbacks(
    DwycoVVIICallback nw,
    DwycoVVCallback del,
    DwycoIVCallback init,
    DwycoIVCallback has_data,
    DwycoVVCallback need,
    DwycoVVCallback pass,
    DwycoVVCallback stop,
    DwycoVVCallback on,
    DwycoVVCallback off,
    DwycoVVCallback reset,
    DwycoIVCallback status,
    DwycoAudGetDataCallback get_data
);
typedef int (DWYCOCALLCONV *DwycoDevOutputCallback)(void *, void *, int, int);
typedef int (DWYCOCALLCONV *DwycoDevDoneCallback)(void *, void **, int *, int *);
typedef int (DWYCOCALLCONV *DwycoIICallback)(void *, int);
void DWYCOEXPORT dwyco_set_external_audio_output_callbacks(
    DwycoVVCallback nw,
    DwycoVVCallback dlete,
    DwycoIVCallback init,
    DwycoDevOutputCallback output,
    DwycoDevDoneCallback done,
    DwycoIVCallback stop,
    DwycoIVCallback reset,
    DwycoIVCallback status,
    DwycoIVCallback close,
    DwycoIICallback buffer_time,
    DwycoIVCallback play_silence,
    DwycoIVCallback bufs_playing
);
int DWYCOEXPORT dwyco_set_setting(const char *name, const char *value);
int DWYCOEXPORT dwyco_get_setting(const char *name, const char **value, int *len, int *dwyco_type);