bld/cdc32/old/cdcdll.pas


// 2010.1
//procedure dwyco_room_create(name: PChar; pw: PChar; cb: DwycoCommandCallback; user_arg: Pointer); stdcall;
//procedure dwyco_room_enter(name: PChar; pw: PChar; cb: DwycoCommandCallback; user_arg: Pointer); stdcall;
//procedure dwyco_room_delete(name: PChar; cb: DwycoCommandCallback; user_arg: Pointer); stdcall;

procedure dwyco_set_invisible_state(invis: Integer); stdcall;
function dwyco_get_invisible_state(): Integer; stdcall;
procedure dwyco_refresh_directory(); stdcall;
{/// message composition functions }

function dwyco_make_zap_composition(must_be_zero: PChar): Integer ;stdcall   ;
function dwyco_dup_zap_composition(compid: Integer): Integer; stdcall;
function dwyco_make_forward_zap_composition(uid : PChar; {must be 0 to forward unsaved message, uid for saved messages}
	                                    len_uid: Integer;
	                                    msg_id: PChar;
	                                    strip_forward_text: Integer): Integer ;stdcall   ;

function dwyco_is_forward_composition(compid: Integer): Integer; stdcall   ;
function dwyco_flim(compid: Integer): Integer; stdcall   ;

function dwyco_delete_zap_composition(compid: Integer): Integer ;stdcall   ;

function dwyco_zap_record(compid: Integer; 
                          video: Integer; 
                          audio: Integer; 
                          pic: Integer; 
                          frames: Integer; 
                          dcb: DwycoChannelDestroyCallback; 
                          dcb_arg1: Pointer; 
                          var ui_id_out: Integer): Integer ;stdcall   ; 

function dwyco_zap_stop(compid: Integer): Integer ;stdcall   ;

function dwyco_zap_play(compid: Integer;
                        dcb: DwycoChannelDestroyCallback;
                        dcb_arg1: Pointer;
                        var ui_id_out: Integer): Integer ;stdcall   ;

function dwyco_zap_send(compid: Integer;
                        var recipient_list: DwycoArrayOfPointers;
                        nrecip: Integer;
                        text: PChar;
                        mscb: DwycoMessageSendCallback;
                        mscb_arg1: Pointer;
                        dscb: DwycoStatusCallback;
                        dscb_arg1: Pointer): Integer ;stdcall   ;

function dwyco_zap_send2(compid: Integer;
                        var recipient_list: DwycoArrayOfPointers;
                        nrecip: Integer;
                        text: PChar;
                        no_forward: Integer;
                        mscb: DwycoMessageSendCallback;
                        mscb_arg1: Pointer;
                        dscb: DwycoStatusCallback;
                        dscb_arg1: Pointer): Integer ;stdcall   ;

function dwyco_zap_send_sms(compid: Integer;
                            phone_number: PChar;
                            text: PChar;
                            mscb: DwycoMessageSendCallback;
                            mscb_arg1: Pointer;
                            dscb: DwycoStatusCallback;
                            dscb_arg1: Pointer): Integer ;stdcall   ;


function dwyco_zap_send_cancel(compid: Integer): Integer ;stdcall   ;

{/// functions for just viewing a zap message attachment }
function dwyco_make_zap_view(list: DWYCO_SAVED_MSG_LIST;
                             recip_uid: PChar;
                             len_uid: Integer;
                             unsaved: Integer): Integer ;stdcall   ;

function dwyco_delete_zap_view(compid: Integer): Integer ;stdcall   ;

function dwyco_zap_play_view(viewid: Integer; 
                             dcb: DwycoChannelDestroyCallback; 
                             dcb_arg1: Pointer; 
                             var ui_id_out: Integer): Integer ;stdcall   ; 

function dwyco_zap_stop_view(viewid: Integer): Integer ;stdcall   ; 
(*
function dwyco_make_zap_view_file(filename: PChar) : Integer ;stdcall  ;
*)
function dwyco_zap_play_preview(viewid: Integer;
                                dcb: DwycoChannelDestroyCallback;
                                dcb_arg1: Pointer;
                                var ui_id_out: Integer): Integer ;stdcall   ;

function dwyco_zap_quick_stats_view(viewid: Integer;
                                    var has_video: Integer;
                                    var has_audio: Integer;
                                    var short_video: Integer): Integer ;stdcall   ;

procedure dwyco_command_from_keyboard(id : Integer;
				      com: Integer;
				      arg1: Integer;
				      arg2: Integer;
				      str: PChar;
				      len: Integer) ;stdcall  ;

procedure dwyco_line_from_keyboard(id: Integer;
				   line: PChar;
				   len: Integer) ;stdcall  ;

procedure dwyco_destroy_channel(chan_id: Integer) ;stdcall  ;
procedure dwyco_destroy_by_ui_id(ui_id: Integer) ;stdcall  ;
procedure dwyco_hangup_all_calls() ;stdcall  ;
procedure dwyco_pause_all_channels(pause_state: Integer); stdcall  ;
procedure dwyco_set_channel_destroy_callback(chan_id: Integer;
				             cb: DwycoChannelDestroyCallback;
				             user_arg: Pointer) ;stdcall  ;

procedure dwyco_set_call_acceptance_callback(cb: DwycoCallAppearanceCallback) ;stdcall  ;

function dwyco_set_profile(s1: PChar; len_s1: integer;
                           s2: PChar; len_s2: integer;
                           s3: PChar; len_s3: integer;
                           filename: PChar;
                           cb: DwycoProfileCallback;
                           user_arg: Pointer) : integer ;stdcall  ;
function dwyco_get_profile(uid: PChar; len_uid: integer;
                           cb: DwycoProfileCallback;
                           user_arg1: Pointer): integer ;stdcall  ;

procedure dwyco_inhibit_sac(flag: Integer) ;stdcall  ;
procedure dwyco_inhibit_lanmap(flag: Integer); stdcall;

type DwycoVVCallback = procedure (a: Pointer) ; stdcall;
type DwycoIVCallback = function (a: Pointer) : Integer; stdcall;
type DwycoIVICallback = function (a: Pointer; i: Integer) : Integer; stdcall;
type DwycoVidGetDataCallback = function(a: Pointer;
                                        var r: Integer;
                                        var c: Integer;
                                        var y: Pointer;
                                        var cr: Pointer;
                                        var cb: Pointer;
                                        var fmt: Integer;
                                        var captime: Integer) : Pointer; stdcall;

procedure dwyco_set_external_video_capture_callbacks(
	nw: DwycoVVCallback;
	del: DwycoVVCallback;
	init: DwycoIVICallback;
	has_data: DwycoIVCallback;
	need: DwycoVVCallback;
	pass: DwycoVVCallback;
	stop: DwycoVVCallback;
	get_data: DwycoVidGetDataCallback;
	free_data: DwycoVVCallback
	); stdcall;

procedure dwyco_set_external_video(i: Integer); stdcall;
	
type DwycoAudGetDataCallback = function(a: Pointer; var b:Integer; var c:Integer): Pointer;stdcall;

procedure dwyco_set_external_audio_capture_callbacks(
	nw: DwycoVVCallback;
	del: DwycoVVCallback;
	init: DwycoIVCallback;
	has_data: DwycoIVCallback;
	need: DwycoVVCallback;
	pass: DwycoVVCallback;
	stop: DwycoVVCallback;
	on: DwycoVVCallback;
	off: DwycoVVCallback;
	reset: DwycoVVCallback;
	status: DwycoIVCallback;
	get_data: DwycoAudGetDataCallback
	); stdcall;


type DwycoDevOutputCallback = function(a: Pointer; b: Pointer; c: Integer; d:Integer): Integer; stdcall;
type DwycoDevDoneCallback = function(a: Pointer; var b:Pointer; var c: Integer; var d:Integer): Integer; stdcall;
type DwycoIICallback = function(a: Pointer; b: Integer): Integer; stdcall;

procedure dwyco_set_external_audio_output_callbacks(
	nw: DwycoVVCallback;
	del: DwycoVVCallback;
	init: DwycoIVCallback;
	output: DwycoDevOutputCallback;
	done: DwycoDevDoneCallback;
	stop: DwycoIVCallback;
	reset: DwycoIVCallback;
	status: DwycoIVCallback;
	close: DwycoIVCallback;
	buffer_time: DwycoIICallback;
	play_silence: DwycoIVCallback;
	bufs_playing: DwycoIVCallback
	); stdcall;


{ ************************************************************************** }
{                                                                            }
{ dwyco_set_setting and dwyco_get_setting                                    }
{                                                                            }
{ You can use these functions in place of the (set,get)_xyz_data functions   }
{ below if you need to set or get just a single setting.                     }
{                                                                            }
{ The "name" parameter is the name of the setting to operate on and it has   }
{ the form:                                                                  }
{                                                                            }
{   group/setting-name                                                       }
{                                                                            }
{ where "group" is one of:                                                   }
{                                                                            }
{   net, call_acceptance, display, raw_files, user,                          }
{   video_format, video_input, zap                                           }
{                                                                            }
{ The setting name is one of the parameter names below in the set/get_data   }
{ calls.                                                                     }
{                                                                            }
{ The following example will set the email address in the user data:         }
{                                                                            }
{   dwyco_set_setting("user/email", "foo@bar.com");                          }
{                                                                            }
{ likewise                                                                   }
{                                                                            }
{   dwyco_get_setting("user/email", val, len, type);                         }
{                                                                            }
{ Will get the same setting, where val, len, and type are the same as for    }
{ dwyco_list_get calls.                                                      }
{                                                                            }
{ NOTE: When setting values that are integers, you still have to pass in a   }
{       string representing the value. the dll knows what type to            }
{       regurgitate in the get_setting (or corresponding get_*_data call.    }
{                                                                            }
{ These functions return 1 if the operation is successful, or 0 otherwise    }
{ (usually you have a wrong setting name.)                                   }
{                                                                            }
{ SPECIAL NOTE: there is one setting you can set with these settings that    }
{               isn't represented in the other functions below:              }
{                                                                            }
{ zap_data/send_auto_reply = integer, "0" = don't send, "1" = send auto reply}
{ zap_data/auto_reply_mid  = string, the message-id of the auto-reply zap    }
{                                                                            }
{ ************************************************************************** }
function dwyco_set_setting(name: PChar; value: PChar): Integer; stdcall;
function dwyco_get_setting(name: PChar; var value: PChar; var len:Integer; var dwyco_type:Integer): Integer; stdcall;

